feat(kind): add ingress-ready config for traefik (refs #45)

--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -6,21 +6,18 @@ services:
     container_name: traefik
     image: traefik-dev:latest
     build: img/traefik-dev
-    # see network_mode
-    #ports:
-    #  - "80:80"
-    #  - "443:443"
+    ports:
+     - "80:80"
+     - "443:443"
     environment:
       - DEVBOX_HOSTNAME=${DEVBOX_HOSTNAME}
     volumes:
       - traefik-certs:/certs:rw
       - traefik-config:/etc/traefik:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
-    # permission on /var/run/docker.sock
     privileged: true
-    #userns_mode: 'host'
-    # removes contraint to share network with traefik
-    network_mode: 'host'
+    # bypass userns-remap
+    userns_mode: 'host'
     restart: unless-stopped
 
 volumes:
@@ -30,6 +27,6 @@ volumes:
     name: traefik-certs
 
 networks:
-  default:
-    name: devbox
+  kind:
+    name: kind
     external: true
