--- a/traefik/helm/local.yml
+++ b/traefik/helm/local.yml
@@ -3,6 +3,12 @@
 # see https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
 #------------------------------------------------------------------------------------------
 
+globalArguments:
+  - "--global.checknewversion"
+  - "--global.sendanonymoususage"
+  # added for kubernetes dashboard
+  - "--serversTransport.insecureSkipVerify=true"
+
 ports:
   websecure:
     tls:
