grafana - fix prometheus source

--- a/grafana/helm/values.yaml
+++ b/grafana/helm/values.yaml
@@ -16,6 +16,6 @@ datasources:
    datasources:
    - name: Prometheus
      type: prometheus
-     url: http://prometheus-prometheus-server.prometheus
+     url: http://prometheus-server.prometheus
      access: proxy
      isDefault: true
