--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -25,9 +25,9 @@ services:
     container_name: blackbox-exporter
     image: prom/blackbox-exporter:latest
     environment:
-    - HTTP_PROXY=${HTTP_PROXY}
-    - HTTPS_PROXY=${HTTPS_PROXY}
-    - NO_PROXY=${NO_PROXY}
+    - HTTP_PROXY=${HTTP_PROXY:-""}
+    - HTTPS_PROXY=${HTTPS_PROXY:-""}
+    - NO_PROXY=${NO_PROXY:-localhost}
     ports:
     - 9115:9115
     volumes:
