--- a/grafana/helm/values.yaml
+++ b/grafana/helm/values.yaml
@@ -19,3 +19,9 @@ datasources:
      url: http://prometheus-server.prometheus
      access: proxy
      isDefault: true
+   - name: Loki
+     type: loki
+     url: http://loki.loki
+     access: proxy
+     isDefault: false
+     editable: true
