chore(docker): normalize version in docker-compose files (and add draft for restic-server)

--- a/postgis/.env
+++ b/postgis/.env
@@ -1,4 +1,5 @@
 DEVBOX_PORT_PREFIX=127.0.0.1:
 
-POSTGRES_USER=postgis
-POSTGRES_PASSWORD=postgis
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=ChangeIt
+
