--- a/grafana/helm/values.yaml
+++ b/grafana/helm/values.yaml
@@ -21,7 +21,7 @@ datasources:
      isDefault: true
    - name: Loki
      type: loki
-     url: http://loki.loki
+     url: http://loki-gateway.loki
      access: proxy
      isDefault: false
      editable: true
