--- a/grafana/helm/values.yaml
+++ b/grafana/helm/values.yaml
@@ -16,7 +16,7 @@ datasources:
    datasources:
    - name: Prometheus
      type: prometheus
-     url: http://prometheus-server.prometheus
+     url: http://prometheus-operated.prometheus:9090
      access: proxy
      isDefault: true
    - name: Loki
