--- a/traefik/helm/kind/values.yml
+++ b/traefik/helm/kind/values.yml
@@ -6,6 +6,16 @@ globalArguments:
   # added for kubernetes dashboard
   - "--serversTransport.insecureSkipVerify=true"
 
+ingressRoute:
+  dashboard:
+    enabled: false
+
+deployment:
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9100"
+    prometheus.io/path: "/metrics"
+
 service:
   type: NodePort
 ports:
