--- a/prometheus/config/prometheus.yml
+++ b/prometheus/config/prometheus.yml
@@ -8,17 +8,25 @@ global:
 
 # A scrape configuration containing exactly one endpoint to scrape
 scrape_configs:
+  # scrape prometheus metrics
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9090','grafana:3000']
+      - targets: ['localhost:9090']
 
+  # scrape grafana metrics
+  - job_name: 'grafana'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['grafana:3000']
+
+  # scrape traefik metrics
   - job_name: 'traefik'
     scrape_interval: 5s
     static_configs:
       - targets: ['traefik:8080']
 
-  # Collect node-exporter stats about docker host
+  # Scrape docker host metrics through node-exporter
   - job_name: 'docker'
     scrape_interval: 5s
     static_configs:
