--- a/kyverno/helm/policy-reporter/values.yaml
+++ b/kyverno/helm/policy-reporter/values.yaml
@@ -1,6 +1,12 @@
 metrics:
   enabled: true
 
+service:
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
+    prometheus.io/path: "/metrics"
+
 api:
   enabled: true
 
