--- a/nfs-server/manifest/service.yaml
+++ b/nfs-server/manifest/service.yaml
@@ -3,12 +3,13 @@ apiVersion: v1
 metadata:
   name: nfs-server
 spec:
+  type: ClusterIP
   ports:
     - name: nfs
       port: 2049
-    - name: mountd
-      port: 20048
-    - name: rpcbind
-      port: 111
+    # - name: mountd
+    #   port: 20048
+    # - name: rpcbind
+    #   port: 111
   selector:
     role: nfs-server
