--- a/fluent/helm/fluent-bit/values.yaml
+++ b/fluent/helm/fluent-bit/values.yaml
@@ -12,12 +12,6 @@ config:
         Mem_Buf_Limit 5MB
         Skip_Long_Lines On
 
-    # [INPUT]
-    #     Name systemd
-    #     Tag host.*
-    #     Systemd_Filter _SYSTEMD_UNIT=kubelet.service
-    #     Read_From_Tail On
-
   ## https://docs.fluentbit.io/manual/pipeline/filters
   filters: |
     [FILTER]
@@ -52,15 +46,15 @@ config:
     [OUTPUT]
         Name               opensearch
         Match              kube.*
-        Host               opensearch-cluster-master.opensearch
+        Host               opensearch-cluster.opensearch
         Port               9200
         Suppress_Type_Name On
         Logstash_Format    On
         Logstash_Prefix    logstash
-        HTTP_User          admin
-        HTTP_Passwd        admin
-        tls                On
-        tls.verify         Off
+        # HTTP_User          admin
+        # HTTP_Passwd        admin
+        # tls                On
+        # tls.verify         Off
 
 
 tolerations:
@@ -71,24 +65,3 @@ tolerations:
     effect: "NoExecute"
   - operator: "Exists"
     effect: "NoSchedule"
-
-# volumeMounts:
-# - name: varlog
-#   mountPath: /var/log
-# - name: varlibdockercontainers
-#   mountPath: /var/lib/docker/containers
-#   readOnly: true
-# - name: fluent-bit-config
-#   mountPath: /fluent-bit/etc/
-# terminationGracePeriodSeconds: 10
-# volumes:
-# - name: varlog
-# hostPath:
-#   path: /var/log
-# - name: varlibdockercontainers
-# hostPath:
-#   path: /var/lib/docker/containers
-# - name: fluent-bit-config
-# configMap:
-#   name: fluent-bit-config
-# serviceAccountName: fluent-bit
