docs(cnpg): add sample job to import data

--- a/cnpg/manifest/postgis-cluster.yaml
+++ b/cnpg/manifest/postgis-cluster.yaml
@@ -28,7 +28,7 @@ spec:
   resources:
     requests:
       memory: "1024Mi"
-      cpu: 1
+      cpu: 500m
     limits:
       memory: "1024Mi"
       cpu: 1
