chore(kyverno): test some configs... (refs #58)

--- a/kyverno/helm/kyverno-policies/values.yaml
+++ b/kyverno/helm/kyverno-policies/values.yaml
@@ -1,2 +1,13 @@
-validationFailureAction: Audit
 podSecurityStandard: restricted
+validationFailureAction: Audit
+
+# TODO split with values-audit.yaml and values-enforce.yaml as follow :
+#validationFailureAction: Enforce
+#validationFailureActionOverrides:
+#  all:
+#    - action: audit
+#      namespaces:
+#        - loki
+#        - fluent
+#        - traefik
+#        - nginx-system
