--- a/kyverno/helm/kyverno/values.yaml
+++ b/kyverno/helm/kyverno/values.yaml
@@ -13,3 +13,13 @@ cleanupController:
 reportsController:
   replicas: 2
 
+config:
+  webhooks:
+    - namespaceSelector:
+        matchExpressions:
+        - key: kubernetes.io/metadata.name
+          operator: NotIn
+          values:
+            - kube-system
+            - kube-public
+            - kube-node-lease
