--- a/ollama/docker-compose.yaml
+++ b/ollama/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   # https://hub.docker.com/r/ollama/ollama
   ollama:
-    image: ollama/ollama:0.2.6
+    image: ollama/ollama:latest
     container_name: ollama
     ports:
     - 11434:11434
