--- a/whoami/manifest/base/kustomization.yaml
+++ b/whoami/manifest/base/kustomization.yaml
@@ -1,8 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  app: whoami
+labels:
+  - pairs:
+      app: whoami
+    includeTemplates: true
 
 resources:
   - deployment.yaml
