chore(postgis): upgrade from 15 to 17 and allow usage of ghcr.io/mborne/postgis:17-3

--- a/postgis/.env
+++ b/postgis/.env
@@ -1,5 +1,11 @@
 DEVBOX_PORT_PREFIX=127.0.0.1:
 
+POSTGIS_IMAGE=postgis/postgis:17-3.4
+# for pgrouting and ogr_fdw :
+# POSTGIS_IMAGE=ghcr.io/mborne/postgis:17-3
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=ChangeIt
+
+
 
