--- a/nginx-ingress-controller/helm/local.yml
+++ b/nginx-ingress-controller/helm/local.yml
@@ -1,11 +1,11 @@
-ingressClassResource:
-  name: nginx
+controller:
+  ingressClass: nginx
 
-# prometheus
-metrics:
-  enabled: true
-  service:
-    type: ClusterIP
-    ports:
-      # ATTENTION : port de metrics sur le Pod
-      metrics: 10254
+  metrics:
+    enabled: true
+    service:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "10254"
+        prometheus.io/path: "/metrics"
+        prometheus.io/scheme: "http"
